--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@microsoft/sp-office-ui-fabric-core": "^1.8.2",
     "@microsoft/sp-property-pane": "1.8.2",
     "@microsoft/sp-webpart-base": "1.8.2",
+    "@pnp/common": "^2.0.2",
     "@pnp/graph": "^2.0.0",
-    "@pnp/sp": "^2.0.0",
+    "@pnp/logging": "^2.0.2",
+    "@pnp/odata": "^2.0.2",
+    "@pnp/sp": "^2.0.2",
+    "@pnp/spfx-controls-react": "1.16.0",
     "@types/es6-promise": "0.0.33",
     "@types/jquery": "^3.3.31",
     "@types/react": "16.7.22",
@@ -27,21 +31,23 @@
     "jquery": "^3.4.1",
     "office-ui-fabric-react": "6.143.0",
     "react": "16.7.0",
+    "react-collapsible": "^2.6.2",
     "react-dom": "16.7.0",
-    "react-router-dom": "4.3.1"
+    "react-router-dom": "4.3.1",
+    "react-tabs": "^3.1.0"
   },
   "resolutions": {
     "@types/react": "16.7.22"
   },
   "devDependencies": {
-    "@microsoft/sp-build-web": "1.8.2",
-    "@microsoft/sp-tslint-rules": "1.8.2",
-    "@microsoft/sp-module-interfaces": "1.8.2",
-    "@microsoft/sp-webpart-workbench": "1.8.2",
     "@microsoft/rush-stack-compiler-2.9": "0.7.7",
-    "gulp": "~3.9.1",
+    "@microsoft/sp-build-web": "1.8.2",
+    "@microsoft/sp-module-interfaces": "1.8.2",
+    "@microsoft/sp-tslint-rules": "1.8.2",
+    "@microsoft/sp-webpart-workbench": "1.8.2",
     "@types/chai": "3.4.34",
     "@types/mocha": "2.2.38",
-    "ajv": "~5.2.2"
+    "ajv": "~5.2.2",
+    "gulp": "^3.9.1"
   }
 }
